--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/simonho288/payment-gateways-compare",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "braintree": "^2.3.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
