--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "paypal-rest-sdk": "^1.7.1",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "^2.4.5",
+    "stripe": "^5.1.0",
     "winston-color": "^1.0.0"
   }
 }
